update input section

--- a/report.html
+++ b/report.html
@@ -34,7 +34,7 @@
     <label>ชื่อ-สกุลผู้แจ้ง</label>
     <input type="text" name="name" required>
 
-    <label>กลุ่มสาระการเรียนรู้</label>
+    <label>กลุ่มสาระการเรียนรู้/กลุ่มงานบริหาร</label>
     <input type="text" name="grade" required>
 
     <label>วันที่</label>
