--- a/icon.html
+++ b/icon.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="th">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>icon menu</title>
+    <title>ระบบแจ้งซ่อม - TP-Maintenance</title>
+    <link rel="stylesheet" href="icon.css">
 </head>
 <body>
-    <a href="report.html">
-    <div class="icon-box">
-        <img src="WrenchIcon.png" alt="Icon">
-        <p>ซ่อมแซม <span>(Maintenance)</span></p>
-    </div>
-</a>
+    <a href="report.html" class="icon-link" id="iconLink">
+        <div class="icon-box" id="iconBox">
+            <img src="WrenchIcon.png" alt="แจ้งซ่อม">
+            <p>แจ้งซ่อม</p>
+            <span>(Maintenance)</span>
+        </div>
+    </a>
+
+    <script src="icon.js"></script>
 </body>
 </html>
