--- a/status.html
+++ b/status.html
@@ -11,7 +11,9 @@
 <header>
   <div class="header-left">
     <div class="hamburger" onclick="toggleMenu()">☰</div>
-    <img src="taweethapisek logo.png" alt="School Logo" class="school-logo">
+    <a href="icon.html" style="text-decoration: none; display: flex; align-items: center;">
+      <img src="taweethapisek logo.png" alt="School Logo" class="school-logo" style="cursor: pointer;">
+    </a>
     <div class="title-text">
       <p class="name">TP Maintenance</p>
       <p class="detail">ระบบแจ้งซ่อม</p>
@@ -25,6 +27,7 @@
   <a href="report.html">แจ้งซ่อม</a>
   <a href="status.html">สถานะการซ่อม</a>
   <a href="history.html">ประวัติการแจ้งซ่อม</a>
+  <a href="admin.html">Admin Panel</a>
 </div>
 
 <div class="page-content">
@@ -33,14 +36,29 @@
     <!-- Card จะถูกสร้างด้วย JS -->
   </div>
 </div>
+
 <!-- Popup ลบรายการ Status -->
 <div id="deleteModal" class="popup">
   <div class="popup-content">
-    <div class="success-icon">⚠️</div>
+    <div class="success-icon"></div>
     <h3>ลบรายการแจ้งซ่อม</h3>
     <p>คุณแน่ใจว่าต้องการลบรายการนี้หรือไม่?</p>
     <button id="confirmDelete" class="delete-btn">ยืนยันลบ</button>
     <button id="cancelDelete" class="close-btn">ยกเลิก</button>
+  </div>
+</div>
+
+<!-- Popup แชร์ -->
+<div id="shareModal" class="popup">
+  <div class="popup-content share-popup">
+    <div class="share-icon"></div>
+    <h3>ลิงก์แชร์</h3>
+    <p>ลิงก์แชร์ถูกคัดลอกแล้ว</p>
+    <div class="share-url-container">
+      <input type="text" id="shareUrlInput" readonly class="share-url-input">
+    </div>
+    <button id="copyShareBtn" class="copy-btn">คัดลอกอีกครั้ง</button>
+    <button id="closeShareBtn" class="close-btn">ปิด</button>
   </div>
 </div>
 
