--- a/menu.html
+++ b/menu.html
@@ -16,4 +16,5 @@
   <a href="report.html">แจ้งซ่อม</a>
   <a href="status.html">สถานะการซ่อม</a>
   <a href="history.html">ประวัติการแจ้งซ่อม</a>
+  <a href="admin.html">Admin Panel</a>
 </div>
