--- a/history.html
+++ b/history.html
@@ -81,6 +81,7 @@
 
 
   <script src="menu.js" defer></script>
+  <script src="data-manager.js"></script>
   <script src="history.js" defer></script>
 </body>
 </html>
