--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,8 @@
   </div>
 </main>
 
-  <script src="admin.js"></script>
+  <script src="data-manager.js"></script>
+    <script src="admin.js"></script>
   <script src="menu.js"></script>
 </body>
 </html>
