--- a/report.html
+++ b/report.html
@@ -97,6 +97,7 @@
 </div>
 
 <script src="menu.js" defer></script>
+<script src="data-manager.js"></script>
 <script src="report.js"></script>
 </body>
 </html>
