--- a/status.html
+++ b/status.html
@@ -63,6 +63,7 @@
 </div>
 
 <script src="menu.js" defer></script>
+<script src="data-manager.js"></script>
 <script src="status.js" defer></script>
 </body>
 </html>
