--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP-Maintenance | ระบบแจ้งซ่อม</title>
-  <meta http-equiv="refresh" content="0; url=icon.html">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="redirect-message">
     <h1>TP-Maintenance</h1>
-    <p>กำลังเปลี่ยนเส้นทาง...</p>
+    <p>ยินดีต้อนรับสู่ระบบแจ้งซ่อม</p>
     <div class="spinner"></div>
-    <p>หากไม่เปลี่ยนเส้นทางอัตโนมัติ <a href="icon.html">คลิกที่นี่</a></p>
+    <p><a href="icon.html">ไปยังหน้าหลัก</a></p>
   </div>
 </body>
 </html>
