--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP-Maintenance | ระบบแจ้งซ่อม</title>
+  <meta http-equiv="refresh" content="0; url=icon.html">
+  <script>
+    // Redirect immediately
+    window.location.href = 'icon.html';
+  </script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="redirect-message">
     <h1>TP-Maintenance</h1>
-    <p>ยินดีต้อนรับสู่ระบบแจ้งซ่อม</p>
+    <p>กำลังไปยังหน้าหลัก...</p>
     <div class="spinner"></div>
-    <p><a href="icon.html">ไปยังหน้าหลัก</a></p>
+    <p><a href="icon.html">คลิกที่นี่หากไม่มีการเปลี่ยนหน้า</a></p>
   </div>
 </body>
 </html>
